# cmake-python-starter

./: .gitignore  CMakeLists.txt  README.md  build.py  requirements.txt  run.py  test.py
include/: main.h
src/cpp/: main.cpp
src/python/: main.py  utils.py
tests/cpp/: main_test.cpp
tests/cpp/util/: new_test.cpp
tests/python/: main_test.py
tools/: watching.py
